Reviewed css to fix misaligned buttons on safari

--- a/res/main.css
+++ b/res/main.css
@@ -606,6 +606,9 @@ div.button div {
     flex-direction: column;
     justify-content: center;  /* Centering y-axis */
     align-items :center;
+    
+    width: 100%;
+    height: 100%;
 }
 
 div.close-button {
